♻️ [core] 去掉路径参数
